--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "node -r module-alias/register ./dist --env=production",
     "dev": "nodemon",
     "test": "nodemon --config ./spec/nodemon.json",
-    "test:no-reloading": "npx ts-node --files -r tsconfig-paths/register ./spec"
+    "test:no-reloading": "npx ts-node --files -r tsconfig-paths/register ./spec",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:generate": "npm run typeorm -- -d ./src/config/data-source.ts migration:generate ./src/config/migrations/newMigration",
+    "migration:run": "npm run typeorm migration:run -- -d ./src/config/data-source.ts",
+    "migration:revert": "npm run typeorm migration:revert -- -d ./src/config/data-source.ts",
+    "migration:auto": "npm run migration:generate -- -n InitDatabase && npm run migration:run"
   },
   "nodemonConfig": {
     "watch": [
@@ -26,6 +31,32 @@
   "engines": {
     "node": ">=8.10.0"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "fs-extra": "^11.2.0",
+    "i18next": "^23.12.2",
+    "i18next-node-fs-backend": "^2.1.3",
+    "jet-logger": "^1.3.1",
+    "jsonwebtoken": "^9.0.2",
+    "misc": "^1.0.2",
+    "module-alias": "^2.2.3",
+    "moment": "^2.30.1",
+    "mysql": "^2.18.1",
+    "path": "^0.12.7",
+    "typeorm": "^0.3.20"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/fs-extra": "^11.0.4",
+    "@types/i18next-node-fs-backend": "^2.1.5",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^20.14.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
+  }
 }
