--- a/package.json
+++ b/package.json
@@ -32,25 +32,37 @@
     "node": ">=8.10.0"
   },
   "dependencies": {
+    "@types/ejs": "^3.1.5",
     "bcrypt": "^5.1.1",
+    "bootstrap": "^4.5.2",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.0",
+    "express-validator": "^7.1.0",
     "fs-extra": "^11.2.0",
     "i18next": "^23.12.2",
+    "i18next-fs-backend": "^2.3.1",
+    "i18next-http-middleware": "^3.6.0",
     "i18next-node-fs-backend": "^2.1.3",
     "jet-logger": "^1.3.1",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "misc": "^1.0.2",
     "module-alias": "^2.2.3",
     "moment": "^2.30.1",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
+    "popper.js": "^1.16.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/connect-flash": "^0.0.40",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/fs-extra": "^11.0.4",
     "@types/i18next-node-fs-backend": "^2.1.5",
     "@types/jsonwebtoken": "^9.0.6",
