--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "mysql": "^2.18.1",
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
+    "pug": "^3.0.3",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
